--- a/.github/workflows/csharpier-check.yaml
+++ b/.github/workflows/csharpier-check.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   check_formatting:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: Check Formatting
     steps:
       - uses: actions/checkout@v2
