--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: very-cool-self-hosted-mbanas
 
     steps:
       - uses: actions/checkout@v4
