--- a/.github/workflows/csharpier-check.yaml
+++ b/.github/workflows/csharpier-check.yaml
@@ -10,6 +10,13 @@ jobs:
     name: Check Formatting
     steps:
       - uses: actions/checkout@v2
+
+      - name: Setup .NET
+        run: |
+          sudo add-apt-repository ppa:dotnet/backports \
+          && sudo apt-get update \
+          && sudo apt-get install -y dotnet-sdk-9.0
+
       - run: |
           dotnet tool restore
           dotnet csharpier check .
