--- a/deployment/AnsibleHost/Dockerfile
+++ b/deployment/AnsibleHost/Dockerfile
@@ -1,15 +1,10 @@
-FROM ubuntu:24.04
-RUN apt-get update
-RUN apt-get install -y --no-install-recommends ansible
+FROM python:3.12-slim
 
-COPY ./actions-runner /app/actions-runner
+# Install Ansible and common dependencies
+RUN pip install --no-cache-dir ansible
 
-ARG USERNAME=appuser
-ARG USER_UID=1234
-ARG USER_GID=$USER_UID
+# Working directory where playbooks will be mounted
+WORKDIR /ansible
 
-RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME
-
-USER $USERNAME
-RUN ansible-playbook -i hosts.yaml provision-test-env.yaml
+# Default command
+CMD ["bash"]
