--- a/deployment/ActionsRunner/Dockerfile
+++ b/deployment/ActionsRunner/Dockerfile
@@ -7,12 +7,15 @@ RUN apt-get install -y --no-install-recommends \
 
 COPY ./actions-runner /app/actions-runner
 
+
+RUN dotnet tool install --global Chickensoft.GodotEnv
+
 ARG USERNAME=appuser
 ARG USER_UID=1234
 ARG USER_GID=$USER_UID
 
 RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME
+  && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME
 
 USER $USERNAME
 
