--- a/deployment/ActionsRunner/Dockerfile
+++ b/deployment/ActionsRunner/Dockerfile
@@ -17,5 +17,6 @@ RUN groupadd --gid $USER_GID $USERNAME \
 USER $USERNAME
 
 RUN dotnet tool install --global Chickensoft.GodotEnv
+RUN export PATH="$PATH:$HOME/.dotnet/tools"
 
 ENTRYPOINT ["/app/actions-runner/run.sh"]
