--- a/deployment/ActionsRunner/Dockerfile
+++ b/deployment/ActionsRunner/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get install -y --no-install-recommends software-properties-common
 RUN add-apt-repository ppa:dotnet/backports
 RUN add-apt-repository ppa:ansible/ansible
 RUN apt-get install -y --no-install-recommends dotnet-sdk-9.0 ansible
+RUN apt-get install -y zip unzip sudo
 
 COPY ./actions-runner /app/actions-runner
 
