--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
 
+      - name: Ensure unzip utility present
+        run: apt-get install -y unzip
+
       - name: Install godot version
         run: godotenv godot install 4.5.1
 
