Combine workflow into one job

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,4 +37,4 @@ jobs:
 
       - name: Run unit tests
         shell: bash
-        run: ${{ env.GODOT }} --run-tests --quit-on-finish
+        run: "${{ env.GODOT }} --run-tests --quit-on-finish"
