Ensure Godot runs headlessly in the VM

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,4 +34,4 @@ jobs:
 
       - name: Run unit tests
         shell: bash
-        run: ~/.config/godotenv/godot/bin/godot --run-tests --quit-on-finish
+        run: ~/.config/godotenv/godot/bin/godot --headless --run-tests --quit-on-finish
