--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,3 +35,14 @@ jobs:
       - name: Run unit tests
         shell: bash
         run: ~/.config/godotenv/godot/bin/godot --headless --run-tests --quit-on-finish
+
+      - name: Package for release
+        run: godot --headless --export-release "Windows Desktop" "build/win64/sheep_project.exe"
+
+      - name: Upload Windows Build
+        uses: actions/upload-artifact@v4
+        with:
+          name: sheep_project-windows
+          path: build/win64/
+          compression-level: 9
+          
