--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,6 +32,10 @@ jobs:
       - name: Set using godot version
         run: godotenv godot use 4.5.1
 
+      - name: Import Godot project
+        shell: bash
+        run: ~/.config/godotenv/godot/bin/godot --headless --import --quit
+
       - name: Run unit tests
         shell: bash
         run: ~/.config/godotenv/godot/bin/godot --headless --run-tests --quit-on-finish
@@ -45,4 +49,3 @@ jobs:
           name: sheep_project-windows
           path: build/win64/
           compression-level: 9
-          
