--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
         run: ~/.config/godotenv/godot/bin/godot --headless --run-tests --quit-on-finish
 
       - name: Package for release
-        run: godot --headless --export-release "Windows Desktop" "build/win64/sheep_project.exe"
+        run: ~/.config/godotenv/godot/bin/godot --headless --export-release "Windows Desktop" "build/win64/sheep_project.exe"
 
       - name: Upload Windows Build
         uses: actions/upload-artifact@v4
