Fix for headless runner

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Run unit tests
         shell: bash
         run: |
-          ~/.config/godotenv/godot/bin/godot --editor --quit
+          ~/.config/godotenv/godot/bin/godot --headless --editor --quit
           ~/.config/godotenv/godot/bin/godot --headless --run-tests --quit-on-finish --path .
 
       - name: Package for release
