Run Ansible playbook in workflow

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Run Ansible playbook to provision environment
+        run: ansible-playbook -i deployment/ActionsRunner/hosts.yaml deployment/ActionsRunner/provision-test-env.yaml
+
       - name: Restore dependencies
         run: dotnet restore
 
