--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run Ansible playbook to provision environment
+        env:
+          LC_ALL: C.UTF-8
+          LANG: C.UTF-8
         run: ansible-playbook -i deployment/ActionsRunner/hosts.yaml deployment/ActionsRunner/provision-test-env.yaml
 
       - name: Restore dependencies
