--- a/deployment/ActionsRunner/provision-test-env.yaml
+++ b/deployment/ActionsRunner/provision-test-env.yaml
@@ -1,6 +1,8 @@
 ---
 - name: Deploy Sheep Project
   hosts: all
+  become: yes
+  become_method: sudo
   tasks:
     - name: Install software-properties-common
       ansible.builtin.apt:
