--- a/deployment/ActionsRunner/provision-test-env.yaml
+++ b/deployment/ActionsRunner/provision-test-env.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Deploy Sheep Project
   hosts: all
-  become: yes
+  # become: yes
   tasks:
     - name: Install software-properties-common
       ansible.builtin.apt:
