Disable gpg checks

--- a/deployment/ActionsRunner/provision-test-env.yaml
+++ b/deployment/ActionsRunner/provision-test-env.yaml
@@ -7,12 +7,16 @@
       ansible.builtin.apt:
         name: software-properties-common
         state: present
+
     - name: Add dotnet backports PPA
       ansible.builtin.apt_repository:
         repo: ppa:dotnet/backports
         state: present
+        allow_unauthenticated: true
+
     - name: Install dotnet SDK
       ansible.builtin.apt:
         name: dotnet-sdk-9.0
         state: present
         update_cache: yes
+        allow_unauthenticated: true
